--- a/src/shared/uikit/blocks/GameGridCell.scss
+++ b/src/shared/uikit/blocks/GameGridCell.scss
@@ -15,8 +15,8 @@
   color: $color-on-sf-secondary;
   /* min-width: rx(40); */
   /* min-height: rx(40); */
-  block-size: clamp(2.5rem, 2.276rem + 0.943vh, 3.125rem);
-  inline-size: clamp(2.5rem, 2.276rem + 0.943vi, 3.125rem);
+  block-size: clamp(2.3rem, 2.276rem + 0.943vh, 3.125rem);
+  inline-size: clamp(2.3rem, 2.276rem + 0.943vi, 3.125rem);
   user-select: none;
   /* pointer-events: none; */
 }
